--- a/src/pages/login/LoginForm.module.css
+++ b/src/pages/login/LoginForm.module.css
@@ -51,3 +51,32 @@
   justify-content: center;
   align-items: center;
 }
+
+.titleLine
+{
+  width: 100%;
+  position: fixed;
+  min-height: 40px;
+  height: 120px;
+  top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  /*border: 1px solid darkblue;*/
+}
+.settingButton
+{
+  margin-left: 30px;
+  font-size: 20px;
+  height: 40px;
+  width: 40px;
+  border-radius: 10px;
+  border: 3px dashed #e0f1e0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  user-select: none;
+  cursor: pointer;
+}
