--- a/src/pages/inventoryStatus.module.css
+++ b/src/pages/inventoryStatus.module.css
@@ -9,6 +9,14 @@
     justify-content: flex-start;
     align-items: center;
 }
+.loading
+{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .titleLine
 {
     width: 100%;
