--- a/src/pages/login/LoginForm.module.css
+++ b/src/pages/login/LoginForm.module.css
@@ -80,3 +80,10 @@
   user-select: none;
   cursor: pointer;
 }
+.loadingArea
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
