--- a/src/pages/component/StockInventory.module.css
+++ b/src/pages/component/StockInventory.module.css
@@ -10,8 +10,8 @@
 .floor
 {
   width: 100%;
-  margin: 10px;
-  box-shadow: 1px 1px 3px 1px lightblue;
+  margin: 1px;
+  /*box-shadow: 1px 1px 3px 1px lightblue;*/
   padding: 5px;
   min-height: 30px;
   display: flex;
@@ -22,6 +22,32 @@
 .grid
 {
   width: 30px;
-  height: 20px;
-  border: 1px solid rebeccapurple;
+  min-height: 20px;
+  height: 100%;
+  /*border: 1px solid rebeccapurple;*/
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 0 3px 1px silver;
+  padding: 2px;
+}
+.objs
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50%;
+}
+.medicineName
+{
+  width: 100%;
+  font-size: 12px;
+  overflow:hidden;
+
+  text-overflow:ellipsis;
+
+  white-space:nowrap;
 }
