--- a/src/pages/login/LoginForm.module.css
+++ b/src/pages/login/LoginForm.module.css
@@ -18,8 +18,11 @@
   padding: 20px 150px 20px 150px;
   border-radius: 20px;
   /*box-shadow: 0 0 50px 3px #cce6f1 inset, 0 0 13px 3px #d9ebef;*/
-  box-shadow: 0 0 3px 3px #cce6f1 inset, 0 0 3px 3px #d9ebef;
+  /*box-shadow: 0 0 3px 3px #cce6f1 inset, 0 0 3px 3px #d9ebef;*/
   /*border: 1px solid red;*/
+  box-shadow: 0 0 30px 3px lightcyan inset, 0 0 3px 3px darkcyan;
+  /*box-shadow: 0 0 30px 3px darkcyan inset, 1px 1px 3px 3px lightgray;*/
+  /*filter: blur(5px);*/
 }
 .login_form_forgot {
   float: right;
