--- a/src/pages/component/WarehouseAC.module.css
+++ b/src/pages/component/WarehouseAC.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     width: 100%;
     box-shadow: 0 0 3px 3px #eef8ff;
-    margin-top: 3%;
+    /*margin-top: 3%;*/
     padding: 10px;
     border-radius: 5px;
 }
@@ -15,18 +15,42 @@
 {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     /*border: 1px solid blue;*/
-    width: 30%;
+    width: 41%;
+
 }
 .statusText
 {
     margin-left: 20px;
 }
+.setting
+{
+  composes: status;
+  width: 10%;
+  transition: 0.4s;
+  /*border: 1px solid red;*/
+}
+.settingOff
+{
+  composes: setting;
+  overflow: hidden;
+  transform: scaleY(0);
+}
+.clickText
+{
+  margin-left: 10px;
+  color: lightblue;
+  font-weight: bold;
+  font-style: inherit;
+  user-select: none;
+  cursor: pointer;
+}
 .indexText
 {
     color: gray;
+  width: 8%;
 }
 .acWorkingText
 {
