失去客户端连接时的页面,严控有效期接口对接,部分接口升级为doPost2

--- a/src/pages/settingManage.module.css
+++ b/src/pages/settingManage.module.css
@@ -63,21 +63,17 @@
 {
   composes: partLight;
 }
-.bestMatchGridWay
-{
-  composes: part;
-}
 .expiration
 {
-  composes: partLight;
+  composes: part;
 }
 .errorProcessMethod
 {
-  composes: part;
+  composes: partLight;
 }
 .medicineWarning
 {
-composes: partLight;
+composes: part;
 }
 .flexRow
 {
@@ -104,4 +100,13 @@ composes: partLight;
 .grayWord
 {
   color: lightgray;
+}
+.center
+{
+  width:100%;
+  height: 100%;
+  display:  flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
