--- a/src/pages/fulfillRecord.module.css
+++ b/src/pages/fulfillRecord.module.css
@@ -32,7 +32,7 @@
     justify-content: center;
     align-items: center;
     min-width: 50%;
-    width: 80%;
+    width: 90%;
     /*border: 1px solid red;*/
 }
 .noteArea
@@ -48,7 +48,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     color: gray;
     padding-bottom: 10px;
 }
@@ -81,4 +81,52 @@
     height: 100%;
     /*min-height: 100%;*/
     /*border: 1px solid skyblue;*/
+}
+.nameArea
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    /*min-width: 200px;*/
+    min-width: 30%;
+    padding-left: 30px;
+    padding-right:30px;
+    /*border: 1px solid red;*/
+}
+.nameLabel
+{
+    min-width: 60px;
+}
+.table
+{
+    /*border:  1px slateblue solid;*/
+}
+.prescribing
+{
+    width: 50%;
+    /*border: 1px darkgreen dashed;*/
+    min-height: 200px;
+    box-shadow: 2px 2px 3px 1px silver;
+    padding: 10px;
+    margin-top: 10px;
+}
+.row
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.title
+{
+    color: darkgray;
+    font-weight: bold;
+    padding-right: 10px;
+    margin: 10px;
+    border-right: 1px dotted lightgray;
+}
+.text
+{
+
 }
